finalizing yellow animation. fixed scrollbar issue on both.

--- a/october-response_blue/300x250_v2/css/styles.css
+++ b/october-response_blue/300x250_v2/css/styles.css
@@ -495,6 +495,7 @@ z-index: 5;
 			#mCSB_1_scrollbar_vertical
 			{
 				z-index:7;
+				padding: 0;
 			}
 
 
